@@ -10,6 +10,7 @@ five
 ,after
 before,
 six
+no span here
 This tests that text inside "a" block inside "span" block is accessible.
 
 On success, you will see a series of "PASS" messages, followed by "TEST COMPLETE".
@@ -17,16 +18,25 @@ On success, you will see a series of "PASS" messages, followed by "TEST COMPLETE
 
 PASS accText is "AXValue:one"
 PASS setCaretOffset(elem, 1) is true
+PASS caretMovedData is "Link|1"
 PASS accText is "AXValue:two"
 PASS setCaretOffset(elem, 1) is true
+PASS caretMovedData is "Link|1"
 PASS accText is "AXValue:three"
 PASS setCaretOffset(elem, 1) is true
+PASS caretMovedData is "Link|1"
 PASS accText is "AXValue:before,four,after"
 PASS setCaretOffset(elem, 1) is true
+PASS caretMovedData is "Link|1"
 PASS accText is "AXValue:five,after"
 PASS setCaretOffset(elem, 1) is true
+PASS caretMovedData is "Link|1"
 PASS accText is "AXValue:before,six"
 PASS setCaretOffset(elem, 1) is true
+PASS caretMovedData is "Link|1"
+PASS accText is "AXValue:nospanhere"
+PASS setCaretOffset(elem, 1) is true
+PASS caretMovedData is "Link|1"
 PASS successfullyParsed is true
 
 TEST COMPLETE
